# BAD_MNIST_NN_C-

./: CMakeLists.txt  MNIST_EigenLoader.cpp  MNIST_EigenLoader.h  Neural_Network.cpp  Neural_Network.h  README.md  main.cpp
